Bug repared: intro popup visible: menu top 0

--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,7 @@ button,
         padding: 0 2rem;
         background-color: transparent;
         font-size: 1.6rem;
-        top: 8rem;
+        top: 0;
         left: 0;
         transform: none;
         color: #faf5f4;
